fix: 补齐第三方登录会员资料同步
